feat: Integrate Google Maps API and update data types
Includes the addition of the Google Maps JavaScript API to `index.html` and structural enhancements to data types in `types.ts`.

The `MapExplorer` component now utilizes the Google Maps API, enabling satellite view and a dark map style. New icons for map interaction have been added.

Data models have been updated to include fields for `audioUrl` and `videoUrl` in `POI`, and `HeritageSite` and `ExperienceJourney` interfaces have been added. The `Artwork` interface now explicitly defines its `category` and `isTimedEvent` property.

The `App.tsx` component now fetches artworks from a cloud source (Supabase) and includes error handling and synchronization status indicators.

`lib/supabase.ts` has been updated with utility functions for slugification and file size formatting, alongside the main database client.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
   
+  <!-- Google Maps API - Key is managed externally or uses environment if supported -->
+  <script src="https://maps.googleapis.com/maps/api/js?v=weekly"></script>
+
   <script>
     tailwind.config = {
       theme: {
